--- a/src/public/scss/_popup-product.scss
+++ b/src/public/scss/_popup-product.scss
@@ -42,6 +42,9 @@
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
           rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
       }
+      a {
+        display: block;
+      }
     }
     .popup-buying {
       width: 50%;
