--- a/src/views/page-views/supplement/box-product.ejs
+++ b/src/views/page-views/supplement/box-product.ejs
@@ -1,6 +1,6 @@
 <div class="nam__list__boxed">
     <a href="/products/<%= data.slug %>">
-        <img src="<%= data.image %>" alt="">
+        <img src="<%= data.image %>" alt="<%= data.name %>" loading="lazy">
     </a>
 
     <div class="boxed__box">
