--- a/src/views/page-views/supplement/popup-product.ejs
+++ b/src/views/page-views/supplement/popup-product.ejs
@@ -7,7 +7,7 @@
     </div>
     <div class="popup-bottom">
         <div class="popup-to-cart">
-            <a href="/cart">Xem giỏ hàng</a>
+            <a href="/gio-hang">Xem giỏ hàng</a>
         </div>
         <div class="popup-buying">
             Tiếp tục mua hàng
