--- a/src/views/page-views/home.ejs
+++ b/src/views/page-views/home.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <div class="wrapper">
-        <%- include('supplement/header', {data: data.info}); -%>
+        <%- include('supplement/header', {data: data.info, account: data.account}); -%>
             <section class="slider">
                 <div class="container">
                     <div class="slider__show">
@@ -29,7 +29,7 @@
             <section class="nam">
 
                 <div class="container">
-                    <a href="#">
+                    <a href="/products?&gender=Nam">
                         <h1 class="nam__namelist">Top nước hoa nam</h1>
                     </a>
 
@@ -44,7 +44,7 @@
             <section class="nam">
 
                 <div class="container">
-                    <a href="#">
+                    <a href="/products?&gender=Nữ">
                         <h1 class="nam__namelist">Top nước hoa nữ </h1>
                     </a>
                     <div class="nam__list">
@@ -57,7 +57,7 @@
             <section class="nam">
 
                 <div class="container">
-                    <a href="#">
+                    <a href="/products?&gender=Unisex">
                         <h1 class="nam__namelist">Top nước hoa unisex</h1>
                     </a>
 
@@ -83,9 +83,9 @@
 
     </div>
     <%- include('supplement/popup-product', {data: data.info}) -%>
-        <script src="../../public/js/page-js/home-slick.js"></script>
-        <script src="../../public/js/page-js/header-toggle.js"></script>
 
+        <script src="../../public/js/page-js/header-toggle.js"></script>
+        <script src="../../public/js/page-js/home-slick.js"></script>
 </body>
 
 </html>
