--- a/src/views/page-views/products.ejs
+++ b/src/views/page-views/products.ejs
@@ -14,7 +14,7 @@
 
 <body>
     <div class="wrapper">
-        <%- include('supplement/header', {data: data.info}); -%>
+        <%- include('supplement/header', {data: data.info, account: data.account}); -%>
             <section class="breadcrumb">
                 <div class="container">
                     <ul>
