da xong cap nhat don hang

--- a/src/views/admin-views/aside.ejs
+++ b/src/views/admin-views/aside.ejs
@@ -9,7 +9,7 @@
                     <i class="fa fa-hdd-o" aria-hidden="true"></i>
                     <span class="hide-menu">Sản phẩm</span>
                 </a></li>
-            <li><a href="#">
+            <li><a href="/admin/order">
                     <i class="fa fa-building" aria-hidden="true"></i>
                     <span class="hide-menu">Đơn hàng</span>
                 </a></li>
